# supermaritimekart

./: BoatDemoMode.cpp  BoatDemoMode.h  CMakeLists.txt  CameraControl.cpp  CameraMouseListener.cpp  CameraMouseListener.h  OceanWindowResize.cpp  OceanWindowResize.h  OsgOceanGetHeight.h  SMK.rc  WaterSprint.cpp  config.xml  initcomponent.h  installer.nsi  main.cpp  readme.txt  run_smk.bat  run_stage.bat
CMakeModules/: FindNetCore.cmake  FinddtOcean.cmake
data/: ArtPipeline.txt  config.xml
ext/: versions.txt
inc/: Armor.h  BoatController.h  BoatInputHandler.h  BoatKeyboardListener.h  CameraController.h  CameraMouseListener.h  CollisionCallback.h  DOFDrawable.h  Damage.h  DeltaOceanGetHeight.h  GameFinder.h  Health.h  ImpactEffectsComponent.h  NetConfig.h  NetworkBuddy.h  OceanWindowResize.h  SMKBoatActor.h  SMK_BeaconData.h  SuperMaritimeKart.h  SuperMaritimeKartMessenger.h  TurretWeapon.h  Weapon.h  WeaponActor.h  WeaponFactory.h  WeaponMouseListener.h
installer/: SuperMaritimeKart_Installer.nsi
src/: Armor.cpp  BoatController.cpp  BoatInputHandler.cpp  main.cpp  (+25 more)
src/actors/: Armor.cpp  BackWeapon.cpp  BackWeaponSlot.cpp  CMakeLists.txt  DOFDrawable.cpp  Damage.cpp  DamageAssessor.cpp  FrontWeapon.cpp  FrontWeaponSlot.cpp  Health.cpp  HealthPickup.cpp  MachineGun.cpp  MineActor.cpp  MineDropper.cpp  PickUpItemHandle.cpp  PickupCategoryEnum.cpp  ProjectileActor.cpp  RocketActor.cpp  RocketLauncher.cpp  SMKActorLibraryRegistry.cpp  SMKBoatActor.cpp  SimpleFloaterActorComponent.cpp  TorpedoLauncher.cpp  Weapon.cpp  WeaponActor.cpp  WeaponFactory.cpp  WeaponSlot.cpp
src/util/: Armor.cpp  CMakeLists.txt  DamageAssessor.cpp  DeltaOceanGetHeight.cpp  Health.cpp
trunk/: CMakeLists.txt  run_smk.bat  run_stage.bat
trunk/CMakeModules/: FindBoatActors.cmake  FindDeltaNetworkAdapter.cmake  FindNetSetGo.cmake  FindNetrospect.cmake  FinddtOcean.cmake
trunk/data/: config.xml
trunk/data/Prefabs/General/: HealthPickup.dtprefab  OceanAndOceanConfig.dtprefab  boat.dtprefab
trunk/data/StaticMeshes/: DeckGun.IVE  Defender25.IVE  DockFront100ft.IVE  HydroGreyCamo.IVE  JumpRamp.IVE  OakTree.IVE  PalmFrons.IVE  Stump.IVE  TreeType1sm.IVE  Tug.ive  Wharfcap.IVE  boatCollisionMesh.ive  height1.ive  height2.ive
trunk/data/StaticMeshes/Boat/: DeckGun.IVE  HydroBoat.IVE  Lagoon.IVE  Mine.IVE  Mine.tga  MineRack.IVE  Mine_LG.IVE  RocketRackGreen.IVE  TorpedoType1.IVE  WeaponRacks.tga
trunk/data/maps/: JustOcean.dtmap  islands.dtmap  track1.dtmap
trunk/data/particles/: bow_spray3.osg  explosion.osg  projectile_explosion.osg  rocket_launch.osg  wake.osg  water_splash8.tga
trunk/data/shaders/: BulletTrail.frag  BulletTrail.vert  BumpedPhong.vert  PerPixelLit.vert  ShaderDefinitions.xml  boat.frag
trunk/ext/: versions.txt
trunk/ext/include/BoatActors/: ActorLibraryRegistry.h  BoatActor.h  Buoy.h  FloatingActor.h  IGetHeight.h  Outboard.h  ParticleDirectionTweaker.h  ParticleEnableTweaker.h  ParticleRateTweaker.h
trunk/ext/include/DeltaNetworkAdapter/: GameMessageSerializer.h  MachineInfoList.h  NetworkBuddy.h  NetworkEngineComponent.h  NetworkMessageQueues.h  NetworkMessages.h  SynchronizedEventMessage.h  machineinfomessage.h
trunk/ext/include/NetCore/: Address.h  GuaranteedDeliverySystem.h  NetCoreExport.h  NetPlatform.h  NetworkEngine.h  NetworkTopology.h  NodeID.h  PacketQueue.h  Socket.h  netassert.h
trunk/ext/include/NetSetGo/NetCore/: Beacon.h  GuaranteedDeliverySystem.h  Mesh.h  NetPlatform.h  NetworkTopology.h  Node.h  NodeID.h  PacketParser.h  PacketQueue.h  ReliabilitySystem.h
trunk/ext/lib/: BoatActors.lib  BoatActorsd.lib  DeltaNetworkAdapter.lib  DeltaNetworkAdapterd.lib  NetCore.lib  NetCored.lib  dtOcean.lib
trunk/inc/: Armor.h  BoatController.h  BoatInputHandler.h  CameraMouseListener.h  DOFDrawable.h  DeltaOceanGetHeight.h  FloaterController.h  GameFinder.h  GeometryUtils.h  Health.h  MachineGunActor.h  PickUpItemHandle.h  SMKActorLibraryRegistry.h  SMKBoatActor.h  SMK_NetworkComponent.h  ScenarioComponent.h  SuperMaritimeKart.h  SuperMaritimeKartComponent.h  TurretWeapon.h  Weapon.h  WeaponActor.h  WeaponMouseListener.h
trunk/inc/actors/: ArmorPickup.h  BackWeapon.h  BackWeaponSlot.h  DamageAssessor.h  FrontWeapon.h  FrontWeaponActor.h  HealthPickup.h  MachineGun.h  MachineGunActor.h  MineActor.h  MineDropper.h  PickUpItemHandle.h  PickupCategoryEnum.h  ProjectileActor.h  RocketActor.h  RocketLauncher.h  SMKActorLibraryRegistry.h  SMKBoatActor.h  TurretWeapon.h  Weapon.h  WeaponActor.h  WeaponFactory.h  WeaponSlot.h
trunk/inc/messages/: DamageMessage.h  NetworkMessages.h
trunk/inc/network/: SMKNetworkExport.h
trunk/inc/util/: Damage.h  DeltaOceanGetHeight.h  GeometryUtils.h  Health.h  SMKUtilExport.h  SMKUtilFunctions.h
trunk/installer/: Super Maritime Kart.bat  SuperMaritimeKart_Installer.nsi
trunk/src/: BoatController.cpp  BoatInputHandler.cpp  BoatKeyboardListener.cpp  CameraController.cpp  CameraMouseListener.cpp  DOFDrawable.cpp  Damage.cpp  DamageAssessor.cpp  DeltaOceanGetHeight.cpp  FloaterController.cpp  GameFinder.cpp  Health.cpp  OceanWindowResize.cpp  PickUpItemHandle.cpp  SMKActorLibraryRegistry.cpp  SMKBoatActor.cpp  SMK_BeaconData.cpp  SMK_NetworkComponent.cpp  ScenarioComponent.cpp  SuperMaritimeKart.cpp  TurretWeapon.cpp  Weapon.cpp  WeaponActor.cpp  WeaponFactory.cpp  WeaponMouseListener.cpp  main.cpp
trunk/src/actors/: ArmorPickup.cpp  BackWeapon.cpp  BackWeaponActor.cpp  BackWeaponSlot.cpp  CMakeLists.txt  FrontWeapon.cpp  FrontWeaponActor.cpp  MachineGun.cpp  MachineGunActor.cpp  MineActor.cpp  MineDropper.cpp  PickUpItemHandle.cpp  PickupItemFactory.cpp  ProjectileActor.cpp  RocketActor.cpp  RocketLauncher.cpp  SMKActorLibraryRegistry.cpp  SMKBoatActor.cpp  TorpedoActor.cpp  TorpedoLauncher.cpp  TurretWeapon.cpp  Weapon.cpp  WeaponActor.cpp  WeaponFactory.cpp  WeaponSlot.cpp
trunk/src/messages/: CMakeLists.txt  DamageMessage.cpp  NetworkMessages.cpp
trunk/src/network/: CMakeLists.txt  NetworkBuddy.cpp
trunk/src/util/: CMakeLists.txt  Damage.cpp  DamageAssessor.cpp  GeometryUtils.cpp  Health.cpp  SMKUtilFunctions.cpp
(+153 files in other folders)
